# sbwa

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  ZEBRA  build.sh  buildIndexMain.cpp  buildindexmain.cpp  ckandmodel1.sh  cmake_install.cmake  naiveBwt.h  patternShadow.h  sBwt.h  testBuiltinPopcount.h
genomes/: t1.fa
release/: ZEBRA
test/: can2Oneline.py  ckandrun.sh  main.cpp  mainForHsa  run.sh  t.fa  t1.fa  testStringCompare.h  verification.txt
test/sbwtBolokwise/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
test/sbwtBolokwise/include/: sbwtBlockwise.h
test/sbwtBolokwise/src/: sbwtBlockwise.cpp
